--- a/home/style.css
+++ b/home/style.css
@@ -1,5 +1,12 @@
+.lora {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
 * {
-  font-family: "Play", sans-serif;
+  font-family: "Lora", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
