--- a/CFUcalculator/calculator.css
+++ b/CFUcalculator/calculator.css
@@ -1,13 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
 .calculator-container {
   background-color: white;
   padding: 20px;
@@ -26,4 +16,29 @@ input {
 
 button {
   cursor: pointer;
+}
+
+.navbar {
+  background-color: #000000;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: adds a shadow for a subtle lift effect */
+}
+
+.nav-link {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.nav-link:hover {
+  background-color: #ddd;
+  color: black;
 }
