--- a/About/about.css
+++ b/About/about.css
@@ -4,6 +4,13 @@
   font-style: normal;
 }
 
+.playfair-display-400 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .lora {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
@@ -12,22 +19,23 @@
 }
 
 * {
-  font-family: "lora", serif;
   margin: 0;
   padding: 0;
 }
 
+p {
+  font-family: "Playfair Display", serif;
+  margin-top: 0;
+}
+
 .paragraph {
-  font-family: "Lora", serif;
+  font-family: "Playfair Display", serif;
+  font-size: 1.3rem;
   margin: 2rem;
 }
 
 #presentation-link {
   font-family: "Lora", serif;
-}
-
-p {
-  margin-top: 0;
 }
 
 h1 {
@@ -36,9 +44,14 @@ h1 {
 }
 
 h2 {
-  font-family: "Abril Fatface", serif;
+  font-family: "lora", serif;
   font-size: 2rem;
-  font-weight: 200;
+  font-weight: 400;
+}
+
+h3 {
+  font-family: "lora", serif;
+  font-weight: 500;
 }
 
 img {
@@ -69,6 +82,7 @@ img {
 }
 
 .nav-link {
+  font-family: "lora", serif;
   float: left;
   color: white;
   text-align: center;
@@ -80,4 +94,8 @@ img {
 .nav-link:hover {
   background-color: #ddd;
   color: black;
+}
+
+.paragraph1 {
+  display: flex;
 }
