--- a/CFUcalculator/calculator.css
+++ b/CFUcalculator/calculator.css
@@ -1,3 +1,22 @@
+.abril-fatface-regular {
+  font-family: "Abril Fatface", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lora {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+}
+h1 {
+  font-family: "Abril Fatface", serif;
+}
+
+body {
+  font-family: "Lora", serif;
+}
+
 .calculator-container {
   background-color: white;
   padding: 20px;
